RESOLVED FIXED144595
[iOS] Crash in -[WebCALayerHostWrapper resolveBounds]
https://bugs.webkit.org/show_bug.cgi?id=144595
Summary [iOS] Crash in -[WebCALayerHostWrapper resolveBounds]
Jer Noble
Reported 2015-05-04 14:03:12 PDT
[iOS] Crash in -[WebCALayerHostWrapper resolveBounds]
Attachments
Patch (1.70 KB, patch)
2015-05-04 14:06 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2015-05-04 14:06:45 PDT
Jer Noble
Comment 2 2015-05-04 14:06:53 PDT
WebKit Commit Bot
Comment 3 2015-05-04 15:15:53 PDT
Comment on attachment 252330 [details] Patch Clearing flags on attachment: 252330 Committed r183774: <http://trac.webkit.org/changeset/183774>
WebKit Commit Bot
Comment 4 2015-05-04 15:15:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.