[iOS] Crash in -[WebCALayerHostWrapper resolveBounds] https://bugs.webkit.org/show_bug.cgi?id=144595

Reviewed by Eric Carlson.

It is possible for a WebCALayorHostWrapper to outlive the WebVideoFullscreenModel to which it refers,
since the model pointer is bare, rather than a RefPtr. The reference to the model must be invalidated
before the model is destroyed.

* platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
(WebVideoFullscreenInterfaceAVKit::cleanupFullscreenInternal):


Canonical link: https://commits.webkit.org/162609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183774 268f45cc-cd09-0410-ab3c-d52691b4dbfc